# ai-powered-compliance-assistant

./: .env  .env.example  .gitignore  pyproject.toml
src/ai_powered_compliance_assistant/: __init__.py
src/compliance_assistant/: main.py
src/compliance_assistant/api/: routes.py
src/compliance_assistant/ingestion/: __init__.py  databricks_upload.py  eurlex.py  eurlex_downloader.py  main.py
src/compliance_assistant/processing/: chunker.py  pdf_reader.py
src/docs/: setup.md
src/frontend/: test_client.html
