[project]
name = "ai-powered-compliance-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Christos Katrinakis", email = "katrinakischristos@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[project.scripts]
ai-powered-compliance-assistant = "ai_powered_compliance_assistant:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"
